# chomprl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  secret.txt
game/: game.py
training/: environment.py  train.py
