[project]
name = "chomprl"
version = "0.1.0"
description = "a chomp bot that tries its best. it is very (very) dumb. please be nice to it.  "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.4",
    "rich>=14.2.0",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'windows'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
